# Pokemon-Go-Box-Analyzer

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml  requirements.txt
config/: default_config.json
data/species_catalog/: README.md  catalog.csv  catalog_draft.csv  fandom_import_summary.json
data/templates/traits/: README.md
scripts/: windows_ocr.ps1
src/pogo_box_analyzer/: __init__.py  aggregate.py  bootstrap.py  cli.py  config.py  fandom_import.py  image_ops.py  models.py  ocr_windows.py  pipeline.py  species_catalog.py  trait_detector.py  web_server.py
src/pogo_box_analyzer/web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
